--- a/src/app/pages/home/components/add-new-currency/add-new-currency.component.html
+++ b/src/app/pages/home/components/add-new-currency/add-new-currency.component.html
@@ -19,6 +19,9 @@
       <input id="rate" type="number" formControlName="rate" placeholder="430" />
     </div>
 
-    <button>MEHET</button>
+    <div class="new-currency__actions">
+      <button>Mentés</button>
+      <button (click)="closeDialog()">Mégsem</button>
+    </div>
   </form>
 </div>
