--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,10 +1,9 @@
 // Variables
-$color-primary: #fff;
-$color-secondary: #000;
+$color-primary: #000;
+$color-secondary: rgb(35, 35, 35);
 
 // Fonts
 $font-primary: '';
-$font-secondary: '';
 
 // Breakpoints
 $breakpoint-extra-large: 1200px;
