font; minimal design

--- a/src/app/pages/home/components/add-new-currency/add-new-currency.component.html
+++ b/src/app/pages/home/components/add-new-currency/add-new-currency.component.html
@@ -21,7 +21,7 @@
 
     <div class="new-currency__actions">
       <button>Mentés</button>
-      <button (click)="closeDialog()">Mégsem</button>
+      <button class="new-currency__close" (click)="closeDialog()">Mégsem</button>
     </div>
   </form>
 </div>
