--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -2,8 +2,11 @@
 $color-primary: #000;
 $color-secondary: rgb(35, 35, 35);
 
+// Colors
+$color-white: #fff;
+
 // Fonts
-$font-primary: '';
+$font-primary: 'Source Sans Pro';
 
 // Breakpoints
 $breakpoint-extra-large: 1200px;
