--- a/src/app/core/layout/dialog/dialog.component.scss
+++ b/src/app/core/layout/dialog/dialog.component.scss
@@ -20,5 +20,5 @@
     padding: 8px;
     border: 0;
     background-color: #fff;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
