--- a/src/assets/scss/_body.scss
+++ b/src/assets/scss/_body.scss
@@ -1,9 +1,14 @@
+@import 'variables';
+@import 'mixins';
+
 body {
+    height: 100%;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     padding-bottom: env(safe-area-inset-bottom);
     line-height: 1.3em;
+    font-family: $font-primary;
     scroll-behavior: smooth;
     text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
@@ -12,4 +17,36 @@ body {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     -webkit-overflow-scrolling: touch;
+}
+
+button {
+    margin: 2px 0 4px;
+    padding: 2px 10px;
+    background: $color-primary;
+    color: $color-white;
+    font-family: $font-primary;
+    font-weight: 500;
+    transition: all 0.2s linear;
+    cursor: pointer;
+
+    &:hover {
+        background: rgba($color-primary, 0.8);
+    }
+
+    &:active {
+        scale: 0.95;
+    }
+}
+
+.form-control {
+    display: flex;
+    flex-direction: column;
+    
+    & + & {
+        margin-top: 9px;
+    }
+}
+
+input, select {
+    padding: 3px 4px;
 }
