--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -24,3 +24,38 @@
       @content;
     }
 }
+
+@mixin wrapper {
+  position: relative;
+  max-width: 800px;
+  margin: 0 auto;
+  box-sizing: border-box;
+
+  @media (min-width: $breakpoint-small) {
+    width: 100%;
+    max-width: 100%;
+    padding: 0 32px;
+  }
+
+  @media (max-width: $breakpoint-small) {
+    width: 100%;
+    max-width: 100%;
+    padding: 0 32px;
+  }
+
+  @media (min-width: $breakpoint-medium) {
+    width: 100%;
+    max-width: 100%;
+    padding: 0 32px;
+  }
+
+  @media (min-width: $breakpoint-large) {
+    max-width: 960px;
+    width: 80%;
+  }
+
+  @media (min-width: $breakpoint-extra-large) {
+    max-width: 900px;
+    width: 80%;
+  }
+}
